fix windows dispaly

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -16,7 +16,7 @@
                 <textarea class="keystore" name="keystore" id="ks" ></textarea>
             </li>
             <li>
-                <label > Password: </label> 
+                <label class="block"> Password: </label> 
                 <input  name="password" id="pd"></input>
             </li>
             <button name="" type="submit" id="ksubmit" value="GetKey">GetPrivateKey</button> 
